--- a/NEWS
+++ b/NEWS
@@ -227,7 +227,11 @@ A) NEW FEATURES AND FIXES IN GUTENPRINT 5.1.0:
 
   8) The output for the Canon PIXMA printers has been improved.
 
-  9) The Canon driver now supports DuplexNoTumble for the PIXMA iP4000.
+  9) The Canon driver now supports DuplexNoTumble for the PIXMA
+     iP4000.
+
+ 10) Roll printing now works correctly on the Epson Stylus Photo
+     R800.
 
 
 ================================================================
